fix issue #18 i.e. ensure correct collapsing in home screen

--- a/static/styles.css
+++ b/static/styles.css
@@ -246,3 +246,9 @@ a:hover {
 #id_measure_file {
     display: none;
 }
+
+.btn-primary {
+    background-color: #28a745;
+}
+
+#home-enter-pm-directly:hover
